v5.0.0/_sources/generated/pcdsdevices.gon.XYZStage.rst.txt
pcdsdevices.gon.XYZStage
========================

.. currentmodule:: pcdsdevices.gon

.. autoclass:: XYZStage

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - x (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_x}``
          - 
          - normal
          - 
    
        * - y (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_y}``
          - 
          - normal
          - 
    
        * - z (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_z}``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    
    